[gd_scene load_steps=2 format=3 uid="uid://buvrrp44ggiq8"]

[ext_resource type="Script" path="res://FileOperations.gd" id="1_03hr8"]

[node name="FileOperations" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_03hr8")

[node name="SavingArea" type="Control" parent="."]
anchors_preset = 0
offset_left = 218.0
offset_top = 33.0
offset_right = 935.0
offset_bottom = 251.0

[node name="LineEdit" type="LineEdit" parent="SavingArea"]
layout_mode = 0
offset_right = 717.0
offset_bottom = 31.0

[node name="TextEdit" type="TextEdit" parent="SavingArea"]
layout_mode = 0
offset_top = 52.0
offset_right = 717.0
offset_bottom = 163.0

[node name="SaveButton" type="Button" parent="SavingArea"]
layout_mode = 0
offset_left = 278.0
offset_top = 179.0
offset_right = 418.0
offset_bottom = 218.0
text = "Save"

[node name="ReadingArea" type="Control" parent="."]
anchors_preset = 0
offset_left = 218.0
offset_top = 293.0
offset_right = 935.0
offset_bottom = 573.0

[node name="TextEdit" type="TextEdit" parent="ReadingArea"]
layout_mode = 0
offset_top = 52.0
offset_right = 717.0
offset_bottom = 280.0

[node name="ChooseFile" type="OptionButton" parent="ReadingArea"]
layout_mode = 0
offset_right = 341.0
offset_bottom = 39.0

[node name="ReadButton" type="Button" parent="ReadingArea"]
layout_mode = 0
offset_left = 381.0
offset_right = 521.0
offset_bottom = 39.0
text = "Read"

[node name="DeleteButton" type="Button" parent="ReadingArea"]
layout_mode = 0
offset_left = 538.0
offset_right = 678.0
offset_bottom = 39.0
text = "Delete"

[connection signal="pressed" from="SavingArea/SaveButton" to="." method="onSaveButtonPressed"]
[connection signal="pressed" from="ReadingArea/ReadButton" to="." method="onReadButtonPressed"]
[connection signal="pressed" from="ReadingArea/DeleteButton" to="." method="onDeleteButtonPressed"]
